# multichain-utils

./: .gitignore  Cargo.toml  Justfile  README.md  deployment-steps.md  rustfmt.toml
crates/collect-fee/: .env.example  Cargo.toml  Justfile  README.md  broadcasts.json
crates/collect-fee/data/: deployments.json
crates/collect-fee/src/: collect_fees.rs  constants.rs  contracts.rs  deployments.json  deployments.rs  main.rs  rpc_methods.rs  states.rs
crates/deployer/: Cargo.toml  Justfile  README.md
crates/deployer/src/: main.rs  utils.rs
crates/deployer/src/utils/: broadcast.rs  chain_data.rs  constants.rs  verify.rs
src/: broadcast.rs  main.rs  utils.rs
src/broadcast/: broadcast.rs  mod.rs
src/utils/: broadcast.rs  chain_data.rs  chain_map.rs  constants.rs  verify.rs
