[package]
name = "collect-fee"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "collect-fee"
path = "src/main.rs"

[dependencies]
alloy = { version = "0.12.0", features = [
    "eips",
    "eip712",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15" 
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.44.1", features = ["full"] }