[package]
name = "collect-fee"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.12.0", features = ["json-rpc"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15" 
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.44.1", features = ["full"] }