[package]
  name = "deployer"
  version = "0.1.0"
  edition = "2021"

[dependencies]
  dotenv = "0.15"                                    # or the latest version
  ethabi = "18.0.0"
  hex = "0.4.3"
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  toml = "0.5"                                       # or the latest version
